k3s-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: spotify
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotify-nowplaying
  namespace: spotify
  labels:
    app: spotify-nowplaying
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spotify-nowplaying
  template:
    metadata:
      labels:
        app: spotify-nowplaying
    spec:
      containers:
        - name: dashboard
          image: ghcr.io/ao-ba/spotify_nowplaying:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http
          volumeMounts:
            - name: cache-volume
              mountPath: /app/.spotifycache
              subPath: .spotifycache
      volumes:
        - name: cache-volume
          persistentVolumeClaim:
            claimName: spotify-cache-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: spotify-nowplaying-service
  namespace: spotify
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      name: http
  selector:
    app: spotify-nowplaying
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotify-nowplaying-ingress
  namespace: spotify
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spotify-nowplaying-service
                port:
                  number: 5000
